[ADD] fix outlook break on img left img right snippet

--- a/addons/fso_website_email_kino/static/src/css/email_theme_kino_snippets.css
+++ b/addons/fso_website_email_kino/static/src/css/email_theme_kino_snippets.css
@@ -15,7 +15,7 @@ img.flexibleImage.snippet_block_banner_image {
 }
 
 .snippet_block_text_image_left .flexibleContainerLeft .flexibleImage {
-    width: 260px;
+    width: 250px;
     height: auto;
 }
 
@@ -29,7 +29,7 @@ img.flexibleImage.snippet_block_banner_image {
 }
 
 .snippet_block_text_image_right .flexibleContainerRight .flexibleImage {
-    width: 260px;
+    width: 250px;
     height: auto;
 }
 
@@ -69,7 +69,7 @@ img.flexibleImage.snippet_block_banner_image {
 
 .snippet_block_text_threecol .flexibleContainer33,
 .snippet_block_text_threecol .flexibleContainer33 .flexibleImage {
-    width: 160px;
+    width: 155px;
 }
 
 .snippet_block_spacer .flexibleContainer {
